# cobrix

./: README.md  RUST_LIBRARY_PLAN.md  build.sbt
cobol-parser/src/main/scala/za/co/absa/cobrix/cobol/reader/parameters/: CobolParameters.scala  CobolParametersParser.scala  VsamParameters.scala
docs/: vsam-connector-comparison.md  vsam-reader-plan.md
project/: Dependencies.scala
rust-cobol/: Cargo.toml  README.md
rust-cobol-datafusion/: Cargo.toml  README.md
rust-cobol-datafusion/examples/: server.rs
rust-cobol-datafusion/src/: lib.rs
rust-cobol/data/: CUSTMAST.cbl  CUSTOMER.ebcdic  CUSTOMER.txt  TRANSHST.cbl
rust-cobol/examples/: convert.rs
rust-cobol/src/: decode.rs  lib.rs  parser.rs  reader.rs  schema.rs
rust-cobol/src/decode/: error.rs
spark-cobol/: pom.xml
spark-cobol/src/main/scala/za/co/absa/cobrix/spark/cobol/parameters/: MetadataFields.scala
spark-cobol/src/main/scala/za/co/absa/cobrix/spark/cobol/source/: CobolRelation.scala  DefaultSource.scala
spark-cobol/src/main/scala/za/co/absa/cobrix/spark/cobol/source/parameters/: CobolParametersValidator.scala
spark-cobol/src/main/scala/za/co/absa/cobrix/spark/cobol/source/vsam/: JZosVsamSource.scala  VsamKeyEncoding.scala  VsamModel.scala
spark-cobol/src/test/scala/za/co/absa/cobrix/spark/cobol/source/: CobolRelationSpec.scala  ParametersParsingSpec.scala
spark-cobol/src/test/scala/za/co/absa/cobrix/spark/cobol/source/parameters/: CobolParametersValidatorSuite.scala
spark-cobol/src/test/scala/za/co/absa/cobrix/spark/cobol/source/vsam/: VsamFilterPushdownSpec.scala  (+1 more)
