[package]
name = "cobrix-rust-datafusion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "DataFusion backend for cobrix-rust copybook/data reader"

[dependencies]
cobrix-rust = { path = "../rust-cobol" }
datafusion = "50"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
