[package]
name = "cobrix-rust-datafusion"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "DataFusion backend for cobrix-rust copybook/data reader"

[dependencies]
cobrix-rust = { path = "../rust-cobol" }
datafusion = "53"
thiserror = "1"

[dev-dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
datafusion-postgres = "0.16.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time", "tracing"] }
